stylesheets/_modules.scss
/* ... */
.module-message__metadata__spacer {
  flex-grow: 1;
}

.module-message__metadata__status-icon {
  width: 12px;
  height: 12px;
  display: inline-block;
  margin-left: 6px;
  margin-bottom: 2px;
}

.module-message__metadata__status-icon--sending {
  animation: module-message__metadata__status-icon--spinning 4s linear infinite;

  @include light-theme {
    @include color-svg('../images/sending.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/sending.svg', $color-white-alpha-80);
  }
  @include ios-theme {
    @include color-svg('../images/sending.svg', $color-gray-60);
  }
  @include ios-dark-theme {
    @include color-svg('../images/sending.svg', $color-white);
  }
}

@keyframes module-message__metadata__status-icon--spinning {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.module-message__metadata__status-icon--sent {
  @include light-theme {
    @include color-svg('../images/check-circle-outline.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg(
      '../images/check-circle-outline.svg',
      $color-white-alpha-80
    );
  }
  @include ios-theme {
    @include color-svg(
      '../images/check-circle-outline.svg',
      $color-white-alpha-80
    );
  }
  @include ios-dark-theme {
    @include color-svg(
      '../images/check-circle-outline.svg',
      $color-white-alpha-80
    );
  }
}
.module-message__metadata__status-icon--delivered {
  width: 18px;

  @include light-theme {
    @include color-svg('../images/double-check.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/double-check.svg', $color-white-alpha-80);
  }
  @include ios-theme {
    @include color-svg('../images/double-check.svg', $color-white-alpha-80);
  }
  @include ios-dark-theme {
    @include color-svg('../images/double-check.svg', $color-white-alpha-80);
  }
}
.module-message__metadata__status-icon--read {
  width: 18px;

  @include light-theme {
    @include color-svg('../images/read.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg('../images/read.svg', $color-white-alpha-80);
  }
  @include ios-theme {
    @include color-svg('../images/read.svg', $color-white-alpha-80);
  }
  @include ios-dark-theme {
    @include color-svg('../images/read.svg', $color-white-alpha-80);
  }
}

// When status indicators are overlaid on top of an image, they use different colors
.module-message__metadata__status-icon--with-image-no-caption {
  @include light-theme {
    background-color: $color-white;
  }
  @include dark-theme {
    background-color: $color-gray-02;
  }
  @include ios-theme {
    background-color: $color-white;
  }
}
.module-message__metadata__status-icon--with-sticker {
  @include ios-theme {
    background-color: $color-gray-60;
  }
}
.module-message__metadata__status-icon--with-tap-to-view-expired {
  @include ios-theme {
    background-color: $color-gray-75;
  }
}

.module-message__metadata__spinner-container {
  margin-left: 6px;
}

.module-message__send-message-button {
  cursor: pointer;

  @include font-body-2-bold;

  margin-top: 8px;
  margin-bottom: -10px;
  margin-left: -12px;
  margin-right: -12px;

  text-align: center;
  padding: 10px;

  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;

  @include light-theme {
    color: $color-signal-blue;
    background-color: $color-gray-02;
    border: 1px solid $color-black-alpha-20;
  }
  @include dark-theme {
    color: $color-signal-blue;
    background-color: $color-gray-75;
    border: 1px solid $color-gray-45;
  }
}

.module-message__author-avatar {
  position: absolute;
  bottom: 0px;
  right: calc(100% + 8px);
}

.module-message__typing-container {
  height: 16px;

  display: flex;
  flex-direction: row;
  align-items: center;
}

// Module: Expire Timer

.module-expire-timer {
  width: 12px;
  height: 12px;
  display: inline-block;
  margin-left: 6px;
  margin-bottom: 2px;

  @include light-theme {
    @include color-svg('../images/icons/v2/timer-60-12.svg', $color-gray-60);
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/timer-60-12.svg',
      $color-white-alpha-80
    );
  }
  @include ios-theme {
    @include color-svg(
      '../images/icons/v2/timer-60-12.svg',
      $color-white-alpha-80
    );
  }
}

$timer-icons: 55, 50, 45, 40, 35, 30, 25, 20, 15, 10, 05, 00;

@each $timer-icon in $conversation-colors {
  .module-expire-timer--#{$timer-icon} {
    @include light-theme {
      @include color-svg(
        '../images/icons/v2/timer-#{$timer-icon}-12.svg',
        $color-gray-60
      );
    }
    @include dark-theme {
      @include color-svg(
        '../images/icons/v2/timer-#{$timer-icon}-12.svg',
        $color-white-alpha-80
      );
    }
    @include ios-theme {
      @include color-svg(
        '../images/icons/v2/timer-#{$timer-icon}-12.svg',
        $color-white-alpha-80
      );
    }
  }
}

.module-expire-timer--incoming {
  background-color: $color-white-alpha-80;

  @include ios-theme {
    background-color: $color-gray-60;
  }
  @include ios-dark-theme {
    background-color: $color-gray-25;
  }
}
.module-expire-timer--incoming-with-tap-to-view-expired {
  background-color: $color-gray-75;
}
.module-expire-timer--with-sticker {
  @include ios-theme {
    background-color: $color-gray-60;
  }
}

// When status indicators are overlaid on top of an image, they use different colors
.module-expire-timer--with-image-no-caption {
  @include light-theme {
    background-color: $color-white;
  }
  @include dark-theme {
    background-color: $color-gray-02;
  }
}

// Module: Quoted Reply

.module-quote-container {
  margin: {
    left: -6px;
    right: -6px;
    top: -4px;
    bottom: 5px;
  }
}

.module-quote-container--with-content-above {
  margin-top: 3px;
}
/* ... */

